[package]
name = "collective-utils"
version = "1.0.0"
edition = "2021"
description = "general utils used by CollectiveAI"
license = "MIT"

[dependencies]
futures-util = "0.3.26"
tokio = { version = "1.26.0", features = ["full"] }
anyhow = "1.0.69"
regex = "1.7.1"
once_cell = "1.17.1"
tokio-stream = "0.1.12"
